@@ -1,3 +1,8 @@
+2009-03-24  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c:  Fix breakage if configured --disable-binary-data-file
+	(Lucas Hart)
+
 2009-03-24  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/pm3d.c (pm3d_plot): The quadrangles are only prepared but not
@@ -6,7 +11,7 @@
 
 2009-03-23  Ethan A Merritt  <merritt@u.washington.edu>
 
-	* src/win/wgraph.c (Wnd_exec_event): Zero 2nd parameter sent to
+	* src/win/wgraph.c (Wnd_exec_event): Clean the 2nd parameter sent to
 	gp_exec_event after a keypress. This should fix the problem leading to
 	"protocol error" messages.
 
